First release is out

--- a/tpfan-admin-0.96/debian/changelog
+++ b/tpfan-admin-0.96/debian/changelog
@@ -1,3 +1,9 @@
+tpfan-admin (0.96-ubuntu3) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Vladyslav Shtabovenko <DFEW.Entwickler@googlemail.com>  Fri, 02 Sep 2011 23:09:10 +0200
+
 tpfan-admin (0.96-ubuntu2) natty; urgency=low
 
   * first public release of the Tpfanco project
