--- a/tpfand-profiles-20110901/debian/changelog
+++ b/tpfand-profiles-20110901/debian/changelog
@@ -1,3 +1,9 @@
+tpfand-profiles (20110901-ubuntu3) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Vladyslav Shtabovenko <DFEW.Entwickler@googlemail.com>  Fri, 02 Sep 2011 23:10:55 +0200
+
 tpfand-profiles (20110901-ubuntu2) natty; urgency=low
 
   * first public release of the Tpfanco project
