--- a/tpfand-0.95/debian/changelog
+++ b/tpfand-0.95/debian/changelog
@@ -1,8 +1,8 @@
-tpfand (0.95-ubuntu3) UNRELEASED; urgency=low
+tpfand (0.95-ubuntu3) natty; urgency=low
 
-  * NOT RELEASED YET
+  * treat sensors with 0 value as disconnected and don't take them into account
 
- -- Vladyslav Shtabovenko <DFEW.Entwickler@googlemail.com>  Fri, 02 Sep 2011 23:08:07 +0200
+ -- Vladyslav Shtabovenko <DFEW.Entwickler@googlemail.com>  Sun, 18 Sep 2011 00:15:42 +0200
 
 tpfand (0.95-ubuntu2) natty; urgency=low
 
