--- a/tpfand-profiles/debian/changelog
+++ b/tpfand-profiles/debian/changelog
@@ -1,8 +1,14 @@
+tpfand-profiles (20120428) oneiric; urgency=low
+
+  * add new profile for X121e (3045-6RG) (thanks to Ingo H.)
+
+ -- Vladyslav Shtabovenko <DFEW.Entwickler@googlemail.com>  Sat, 28 Apr 2012 20:25:17 +0200
+
 tpfand-profiles (20120305) oneiric; urgency=low
 
   * add new profile for X300 (6478-14G) (thanks to Oliver D.)
 
- -- vs <vs@charmonium.vladnet.vvsnet>  Mon, 05 Mar 2012 23:00:57 +0100
+ -- Vladyslav Shtabovenko <DFEW.Entwickler@googlemail.com>  Mon, 05 Mar 2012 23:00:57 +0100
 
 tpfand-profiles (20120111) oneiric; urgency=low
 
