Initial support for systemd

--- a/tpfand/README
+++ b/tpfand/README
@@ -1,4 +1,4 @@
-ThinkPad Fan Control daemon (tpfand)
+Tpfanco daemon (tpfand)
 ====================================
 
 tpfand controls the system fan of ThinkPad notebooks based on specified 
@@ -9,28 +9,19 @@ tpfand is written entirely in Python and licensed under the GNU GPL version 3.
 
 REQUIREMENTS
 ============
-Python 2.5
-DBus with bindings for Python
-thinkpad_acpi kernel module with fan control support
-
-NOTE: Some versions of the thinkpad_acpi module must be loaded
-	  with fan_control=1 to enable fan control. On some distributions
-	  you have to append the line "thinkpad_acpi fan_control=1" to
-	  /etc/modules. Refer to your distribution manual about
-	  kernel module configuration.
+* Python 2.7
+* DBus with bindings for Python
+* python-dmidecode module
+* thinkpad_acpi kernel module loaded with fan_control=1 to enable fan control.
 
 INSTALLATION
 ============
-1. Adjust src/tpfand/build.py to your needs.
-2. Run make install
-3. Make sure that tpfand is started on every boot. This is done
-   in a distribution specific way. (for example with update-rc.d
-   on Ubuntu)
-4. Install the man page tpfand.8 (optional)
-5. Download contributed profiles from 
-   http://www.gambitchess.org/tp-fan/profile_download.py
-   and extract them to the directory you specified under data_dir in build.py. 
-   (optional)
+If you use a distribution with systemd (e.g Fedora), run
+"sudo make install-systemd" and "sudo systemctl enable tpfand".
+Reboot your system to finish the install process.
+
+If you use a distribution with sysvinit (e.g Debian or Ubuntu), run
+"sudo make install-sysvinit". Reboot your system to finish the install process.
 
 You can uninstall this program by running make uninstall.
 
